--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,24 @@
     --color-hover-default: #00549F; /* Darker shade for primary hover state */
     
     --color-text-link: #0171d3;
+
+
+
+    --red:red;
+    --black: #000000;
+    --color-active: rgb(49, 124, 172);
+    --font-size: 16px;
+    --color-list-item: #16abff33;
+    --max-width: 1100px;
+    --border-radius: 12px;
+    --blue: rgb(49, 124, 172);
+    --white: white;
+    --shadow-color1: rgba(2, 11, 21, 0.24);
+    --shadow-color2: rgba(149, 157, 165, 0.2);
+    --shadow1: var(--shadow-color1) 0px 8px 24px;
+    --shadow2: var(--shadow-color2) 0px 8px 24px;
+    --navbarHeight: 50px;
+    --navbarHeight: 50px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -76,6 +94,7 @@
   
 html,
 body {
+    display: grid;
     margin: 0;
     font-family: var(--font-family);
     -webkit-font-smoothing: antialiased;
@@ -85,7 +104,6 @@ body {
     background-image: linear-gradient(to right, var(--gradient-start) 0%, var(--gradient-end) 100%);
     width: 100vw;
     height: 100vh;
-    display: flex;
     max-width: 100vw;
     max-height: 100vh;
 }
