test: remove react-router-dom and react-test-renderer

--- a/src/components/auth/reset-password/reset-password.module.css
+++ b/src/components/auth/reset-password/reset-password.module.css
@@ -34,12 +34,12 @@
     align-self: flex-start;
 }
 
-.smallLoader, .resetButton {
+.resetButton {
     align-self: center;
 }
 
 @media all and (max-width: 460px) {
-    .smallLoader, .resetButton {
+    .resetButton {
         align-self: center;
     }
 }
