--- a/src/components/auth/signup-form/signup-form.module.css
+++ b/src/components/auth/signup-form/signup-form.module.css
@@ -4,14 +4,14 @@
 	max-width: 450px;
 	margin: 0 auto;
 	font-family: var(--font-family);
-	color: var(--color-text-primary);
+	color: var(--color-semantic-text-primary);
 }
 
 .card {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background-color: var(--color-surface);
+	background-color: var(--color-semantic-surface);
 	border-radius: var(--border-radius);
 	box-shadow: var(--shadow1);
 	padding: 2rem;
@@ -22,7 +22,7 @@
 	margin: 0;
 	font-size: 1.8rem;
 	font-weight: bold;
-	color: var(--color-primary);
+	color: var(--color-semantic-text-primary);
 }
 
 .form {
@@ -49,7 +49,7 @@
 }
 
 .formLink span {
-	color: var(--color-text-secondary);
+	color: var(--color-semantic-text-secondary);
 }
 
 .loginLink {
@@ -60,7 +60,7 @@
 }
 
 .loginLink:hover {
-	color: var(--color-primary);
+	color: var(--color-semantic-text-primary);
 }
 
 /* Responsive */
