--- a/src/components/routing/navigation/navigation-buttons/navigation-buttons.module.css
+++ b/src/components/routing/navigation/navigation-buttons/navigation-buttons.module.css
@@ -35,7 +35,7 @@
 	border: 1px solid var(--color-hover-default);
 	border-radius: 4px;
 	text-decoration: none;
-	color: var(--color-text-primary);
+	color: var(--color-semantic-text-primary);
 	background-color: var(--blue);
 }
 
@@ -44,7 +44,7 @@
 	border: 1px solid var(--color-hover-default);
 	border-radius: 4px;
 	text-decoration: none;
-	color: var(--color-text-primary);
+	color: var(--color-semantic-text-primary);
 	background-color: var(--black);
 }
 
