--- a/src/components/routing/not-found-page/not-found-page.module.css
+++ b/src/components/routing/not-found-page/not-found-page.module.css
@@ -4,5 +4,5 @@
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	color: var(--color-text-primary);
+	color: var(--color-semantic-text-primary);
 }
