--- a/src/theme/password-input.module.css
+++ b/src/theme/password-input.module.css
@@ -27,7 +27,7 @@
 /* Danger Variant: For critical actions or warnings */
 .inputWrapper[data-variant='danger'] {
 	background-color: var(--color-danger-background); /* Background for danger inputs */
-	color: var(--color-text-primary); /* Light text for contrast */
+	color: var(--color-semantic-text-primary); /* Light text for contrast */
 	border: 1px solid var(--color-danger-border); /* Border color for danger inputs */
 }
 
@@ -38,7 +38,7 @@
 /* Default Variant: Neutral style for regular inputs */
 .inputWrapper[data-variant='default'] {
 	background-color: var(--color-default-background); /* Background for default inputs */
-	color: var(--color-text-primary); /* Light text for good contrast */
+	color: var(--color-semantic-text-primary); /* Light text for good contrast */
 	/* border: 1px solid var(--color-default-border); /* Border color for default inputs */
 }
 
