--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@
 	}
 }
 
+:root {
+	--navbarHeight: 50px;
+}
+
 html,
 body {
 	display: grid;
@@ -13,7 +17,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	color: var(--color-semantic-text-primary);
-	background-image: var(--color-semantic-gradient-primary);
+	background: var(--color-semantic-background-primary);
 	width: 100vw;
 	height: 100vh;
 	max-width: 100vw;
@@ -29,7 +33,7 @@ body {
 /* Customize CSS Scrollbars for improved styling */
 * {
 	scrollbar-width: thin;
-	scrollbar-color: var(--color-semantic-secondary) var(--color-semantic-surface); /* For Firefox */
+	scrollbar-color: var(--color-semantic-border-strong) var(--color-semantic-background-secondary); /* For Firefox */
 }
 
 /* Works on Chrome, Edge, and Safari */
@@ -38,11 +42,11 @@ body {
 }
 
 *::-webkit-scrollbar-track {
-	background: var(--color-semantic-surface);
+	background: var(--color-semantic-background-secondary);
 }
 
 *::-webkit-scrollbar-thumb {
-	border: 2px solid var(--color-semantic-surface);
+	border: 2px solid var(--color-semantic-background-secondary);
 	border-radius: 10px;
-	background-color: var(--color-semantic-secondary);
+	background-color: var(--color-semantic-border-strong);
 }
