--- a/src/components/routing/navigation/navigation.module.css
+++ b/src/components/routing/navigation/navigation.module.css
@@ -7,8 +7,8 @@
 	min-height: var(--navbarHeight);
 	display: grid;
 	grid-template-columns: fit-content fit-content;
-	background-color: var(--black, #61b9e8);
-	box-shadow: 0px 2px 6px var(--shadow-color2);
+	background-color: var(--color-semantic-background-primary);
+	box-shadow: var(--color-semantic-shadow-sm);
 	padding: 0px 20px;
 	z-index: 1;
 	grid-row: 1;
@@ -25,12 +25,12 @@
 .logo {
 	width: 1.5em;
 	height: 1.5em;
-	color: white;
+	color: var(--color-semantic-text-primary);
 	display: inline-block;
 }
 
 .appName {
-	color: white;
+	color: var(--color-semantic-text-primary);
 	font-size: large;
 	font-weight: 200;
 	white-space: nowrap;
