--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
+@import url('../tokens/index.css');
+
+@media (prefers-color-scheme: dark) {
+	html {
+		color-scheme: dark;
+	}
+}
+
 :root {
 	--navbarHeight: 50px;
 }
